<resources>
    <string name="app_name">Orderly</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storage">Storage</string>
    <string name="export">Export</string>
    <string name="tag">Tags</string>
    <string name="newProject">New Project</string>
    <string name="tv_noProject">You do not have any project</string>
    <string name="tv_createProject">Why not create one?</string>
    <string name="tv_dialog_title_create_new_project">NEW PROJECT</string>
    <string name="tv_dialog_title_choose_project">OPEN PROJECT</string>
    <string name="tv_enter_a_name">Project Name:</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="open">OPEN</string>
    <string name="New">NEW</string>
    <string name="tv_hint_text">* Maximum 16 characters</string>
    <string name="Enter_a_name">Enter a name</string>
    <string name="inventory">Inventory</string>
    <string name="delete_item">Delete</string>
    <string name="add_item">Add</string>
    <string name="dashboard">Dashboard</string>
    <string name="tv_manage_tags">MANAGE TAGS</string>
    <string name="close">CLOSE</string>
    <string name="edit">EDIT</string>
</resources>
