<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group >
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/inventory" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_circle"
            android:title="@string/add_item" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/ic_remove_circle"
            android:title="@string/delete_item" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_inventory"
            android:title="@string/inventory" />
    </group>
</menu>